Bug #12648: Thumbnails in Gallery not Visible in Chrome
We do the rounded corners with CSS3 instead of JS.  It works in Safari 3 and
Firefox, along with Chrome.

--- a/static/css/video_page.css
+++ b/static/css/video_page.css
@@ -565,3 +565,9 @@ body.bulkedit td div.field {
 #massedit {
     display: none;
 }
+
+.rounded {
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    padding: 10px;
+}
